--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   build: .
   command: node ./bin/www
   volumes:
-   - .:/fixit-app
+   - .:/minimo2
   ports:
    - "3000:3000"
   links:
